Changed page.balank to page.blank

--- a/lang/nl_NL.lang
+++ b/lang/nl_NL.lang
@@ -39,7 +39,7 @@ tile.myst.writing_desk.name=Schrijftafel
 item.myst.agebook.name=Beschrijvend Boek
 item.myst.linkbook.name=Verbindingsboek
 item.myst.notebook.name=Notitieboek
-item.myst.page.balank.name=Blanke Pagina
+item.myst.page.blank.name=Blanke Pagina
 item.myst.page.panel.name=Link Paneel Pagina
 item.myst.page.symbol.name=Pagina
 item.myst.unlinkedbook.name=Ongelinkt Verbindingsboek
