--- a/lang/nl_NL.lang
+++ b/lang/nl_NL.lang
@@ -66,7 +66,7 @@ achievement.myst.quinn.desc=Reis naar een dimensie zonder een verbindingsboek. H
 
 linkeffect.disarm.name=Ontwapenen
 linkeffect.generateplatform.name=Genereer Platform
-linkeffect.intralinking.name=Tussen Dimensie Linken
+linkeffect.intralinking.name=Intra-Dimensioneel Linken
 linkeffect.maintainmomentum.name=Moment Behouden
 linkeffect.relative.name=Relatieve Link
 
@@ -119,7 +119,7 @@ mystsymbol.NetherFort.name=Nether Fort
 mystsymbol.NoHorizon.name=Grenzeloze Lucht
 mystsymbol.NoSea.name=Geen Zeeën
 mystsymbol.Obelisks.name=Obelisken
-mystsymbol.PvPOff.name=Geen-PvP
+mystsymbol.PvPOff.name=Geen PvP
 mystsymbol.Rainbow.name=Regenboog
 mystsymbol.Ravines.name=Ravijnen
 mystsymbol.Skylands.name=Luchtlanden
@@ -138,7 +138,7 @@ mystsymbol.TerrainEnd.name=Eilanden Wereld
 mystsymbol.TerrainNether.name=Grotten Wereld
 mystsymbol.TerrainNormal.name=Standaard Wereld
 mystsymbol.WeatherCloudy.name=Regenachtig
-mystsymbol.WeatherFast.name=Snelle Wereld
+mystsymbol.WeatherFast.name=Snel Weer
 mystsymbol.WeatherNorm.name=Normaal Weer
 mystsymbol.WeatherOff.name=Geen Weer
 mystsymbol.WeatherOn.name=Eeuwig Weer
