--- a/lang/fr_FR.lang
+++ b/lang/fr_FR.lang
@@ -26,7 +26,7 @@ tile.myst.unstable.red.name=Détérioration Rouge
 tile.myst.unstable.purple.name=Détérioration Violette
 tile.myst.unstable.white.name=Détérioration Blanche
 tile.myst.unstable.black.name=Détérioration Noire
-tile.myst.crystal.name=Crystal
+tile.myst.crystal.name=Cristal
 tile.myst.lectern.name=Table de Lecture
 tile.myst.bookstand.name=Étagère
 tile.myst.linkmodifier.name=Éditeur de Liens
@@ -37,23 +37,102 @@ tile.myst.starfissure.name=Fracture Stellaire
 tile.myst.writing_desk.name=Bureau d'Écriture
 
 item.myst.agebook.name=Livre Descriptif
-item.myst.linkbook.name=Livre Lié
+item.myst.linkbook.name=Livre de lien
 item.myst.notebook.name=Cahier
 item.myst.page.name=Page
-item.myst.unlinkedbook.name=Livre Délié
+item.myst.unlinkedbook.name=Livre de lien vierge
 item.myst.writingdesk.name=Bureau d'Écriture
 item.myst.vial.name=Fiole d'encre
 
 fluid.myst.ink.black=Encre Noire
 tile.myst.fluid.myst.ink.black.name=Encre Noire
 
-achievement.myst.symbol=Petite étape du Voyage
+achievement.myst.symbol=Première étape du Voyage
 achievement.myst.symbol.desc=Trouver un Symbole
 achievement.myst.write=L'Art : Commencement
 achievement.myst.write.desc=Copier un Symbole
 achievement.myst.agebook=Aller sans Retour
 achievement.myst.agebook.desc=Fabriquer un Livre Descriptif. N'oubliez pas que c'est un billet sans retour !
 achievement.myst.linkbook=Nouer une ficelle
-achievement.myst.linkbook.desc=Fabriquer un Livre Lié. Bien, maintenant vous pourrez revenir !
+achievement.myst.linkbook.desc=Fabriquer un Livre de lien. Bien, maintenant vous pourrez revenir !
 achievement.myst.quinn=Appellez-moi Quinn
-achievement.myst.quinn.desc=Voyager dans une dimension sans Livre Lié. Espérez qu'il y ai une sortie !
+achievement.myst.quinn.desc=Voyager dans une dimension sans Livre de lien. Espérez qu'il y ai une sortie !
+
+mystsymbol.BioConHuge.name=Biomes Immense
+mystsymbol.BioConLarge.name=Grand Biomes
+mystsymbol.BioConMedium.name=Biomes Moyen
+mystsymbol.BioConNative.name=Controleur de Biome natif
+mystsymbol.BioConSingle.name=Biome Unique
+mystsymbol.BioConSmall.name=Petit Biomes
+mystsymbol.BioConTiled.name=Biomes Carrelés
+mystsymbol.BioConTiny.name=Biomes Minuscules
+mystsymbol.Caves.name=Cavernes
+mystsymbol.ColorCloud.name=Couleur du Ciel
+mystsymbol.ColorCloudNat.name=Couleur du Ciel Naturelle
+mystsymbol.ColorFog.name=Couleur du Brouillard
+mystsymbol.ColorFogNat.name=Couleur du Brouillard Naturelle
+mystsymbol.ColorFoliage.name=Couleur du Feuillage
+mystsymbol.ColorFoliageNat.name=Couleur du Feuillage Naturelle
+mystsymbol.ColorGrass.name=Couleur de l'herbe
+mystsymbol.ColorGrassNat.name=Couleur de l'herbe Naturelle
+mystsymbol.ColorHorizon.name=Couleur du Couché de Soleil
+mystsymbol.ColorSky.name=Couleur du Ciel
+mystsymbol.ColorSkyNat.name=Couleur du Ciel Naturelle
+mystsymbol.ColorSkyNight.name=Couleur du Ciel Nocturne
+mystsymbol.ColorWater.name=Couleur de l'eau
+mystsymbol.ColorWaterNat.name=Couleur de l'eau Naturelle
+mystsymbol.CryForm.name=Formations Cristallines
+mystsymbol.DenseOres.name=Minerais Denses
+mystsymbol.Dungeons.name=Donjons
+mystsymbol.EnvAccel.name=Acceléré
+mystsymbol.EnvExplosions.name=Explosions Spontanées
+mystsymbol.EnvLightning.name=Foudre
+mystsymbol.EnvMeteor.name=Météores
+mystsymbol.EnvScorch.name=Surface Brulante
+mystsymbol.Flat.name=Monde Plat
+mystsymbol.FloatIslands.name=Iles Flottantes
+mystsymbol.GenSpikes.name=Épines
+mystsymbol.HugeTrees.name=Grands Arbres
+mystsymbol.LakesDeep.name=Lacs des Pronfondeurs
+mystsymbol.LakesSurface.name=Lacs de Surface
+mystsymbol.LightingBright.name=Éclairage Important
+mystsymbol.LightingDark.name=Éclairage Faible
+mystsymbol.LightingNormal.name=Éclairage Normal
+mystsymbol.Mineshafts.name=Puits de mines
+mystsymbol.ModClear.name=Effacer les Modifications
+mystsymbol.ModGradient.name=Gradient
+mystsymbol.MoonDark.name=Lune Sombre
+mystsymbol.MoonNormal.name=Lune Normale
+mystsymbol.NetherFort.name=Forteresse du Nether
+mystsymbol.NoHorizon.name=Ciel Infini
+mystsymbol.NoSea.name=Pas de Mer
+mystsymbol.Obelisks.name=Obélisques
+mystsymbol.PvPOff.name=Anti-PvP
+mystsymbol.Rainbow.name=Arc-en-Ciel
+mystsymbol.Ravines.name=Ravines
+mystsymbol.Skylands.name=Mondes Aeriens
+mystsymbol.StarFissure.name=Fissure Stellaire
+mystsymbol.StarsDark.name=Étoiles Sombres
+mystsymbol.StarsEndSky.name=Ciel de l'Ender
+mystsymbol.StarsNormal.name=Étoiles Normales
+mystsymbol.StarsTwinkle.name=Étoiles Clignotantes
+mystsymbol.Strongholds.name=Forteresses
+mystsymbol.SunDark.name=Soleil Sombre
+mystsymbol.SunNormal.name=Soleil Normal
+mystsymbol.Tendrils.name=Vrilles
+mystsymbol.TerModSpheres.name=Spheres
+mystsymbol.TerrainAmplified.name=Monde Normal Amplifié
+mystsymbol.TerrainEnd.name=Monde Aquatique
+mystsymbol.TerrainNether.name=Monde Souterrain
+mystsymbol.TerrainNormal.name=Monde Classique
+mystsymbol.WeatherCloudy.name=Nuageux
+mystsymbol.WeatherFast.name=Météo Rapide
+mystsymbol.WeatherNorm.name=Météo Normale
+mystsymbol.WeatherOff.name=Sans Météo
+mystsymbol.WeatherOn.name=Météo Figée
+mystsymbol.WeatherRain.name=Pluie Eternelle
+mystsymbol.WeatherSlow.name=Météo Lente
+mystsymbol.WeatherSnow.name=Neige Eternelle
+mystsymbol.WeatherStorm.name=Tempete Eternelle
+mystsymbol.Villages.name=Villages
+mystsymbol.Void.name=Monde Vide
