--- a/lang/bg_BG.lang
+++ b/lang/bg_BG.lang
@@ -1,150 +1,150 @@
-commands.myst.tpx.usage=/tpx [subject:player] <target:player | target:dim [x y z]>
-commands.myst.tpx.fail.nosubject=Teleport subject invalid. No tp.
-commands.myst.tpx.fail.noworld=Could not get world for dimension %d. No tp.
+commands.myst.tpx.usage = / ТРХ [предмет: плейър] <мишена: плейър | мишена: измерение [XYZ]>
+commands.myst.tpx.fail.nosubject = Teleport подлежи невалиден. не ТР.
+commands.myst.tpx.fail.noworld = Не може да получите свят за измерение% г. Не ТР.
 
-commands.myst.time.usage=/time <set|add> <value> [dim]
-commands.myst.time.fail.noworld=Target Dimension is not Loaded
-commands.myst.time.set=Set the time to %d in dimension %d
-commands.myst.time.set.all=Set the time to %d in all dimensions
-commands.myst.time.added=Added %d to the time in dimension %d
-commands.myst.time.added.all=Added %d to the time in all dimensions
+commands.myst.time.usage = / час <set|add> <value> [неясен]
+commands.myst.time.fail.noworld = Target Dimension не е Loaded
+commands.myst.time.set = Задайте времето за% г в размер% г
+commands.myst.time.set.all = Задайте времето за% г във всички измерения
+commands.myst.time.added = добавяне% г до момента в измерение% г
+commands.myst.time.added.all = Добавено% г до момента във всички измерения
 
-commands.myst.toggledownfall.usage=/toggledownfall [dim]
-commands.myst.downfall.success=Toggled downfall in dimension %d
-commands.myst.downfall.fail.nodim=No dimension set.
+commands.myst.toggledownfall.usage = / toggledownfall [неясен]
+commands.myst.downfall.success = превключват падение в измерение% г
+commands.myst.downfall.fail.nodim = Не измерение набор.
 
-commands.myst.agebook.usage=/myst-agebook [dim]
-commands.myst.twi.usage=/myst-twi [dim] [true|false]
-commands.myst.meteor.usage=/myst-spawnmeteor
-commands.myst.permissions.usage=/myst-permissions <player> <restrict|permit> <entry|depart> <all|dimid>
-commands.myst.chunkregen.usage=/myst-regenchunk [range] [dimId] [chunkX] [chunkZ]
+commands.myst.agebook.usage = / Myst-agebook [неясен]
+commands.myst.twi.usage = / Myst-TWI [неясен] [вярно | фалшиви]
+commands.myst.meteor.usage = / Myst-spawnmeteor
+commands.myst.permissions.usage = / Myst-разрешения <player> <restrict|permit> <entry|depart> <all|dimid>
+commands.myst.chunkregen.usage = / Myst-regenchunk [кръг] [dimId] [chunkX] [chunkZ]
 
-tile.myst.receptacle.name=Book Receptacle
-tile.myst.unstable.name=Decay Effect
-tile.myst.unstable.blue.name=Blue Decay
-tile.myst.unstable.red.name=Red Decay
-tile.myst.unstable.purple.name=Purple Decay
-tile.myst.unstable.white.name=White Decay
-tile.myst.unstable.black.name=Black Decay
-tile.myst.crystal.name=Crystal
-tile.myst.lectern.name=Lectern
-tile.myst.bookstand.name=Bookstand
-tile.myst.linkmodifier.name=Link Modifier
-tile.myst.bookbinder.name=Book Binder
-tile.myst.inkmixer.name=Ink Mixer
-tile.myst.linkportal.name=Link Portal
-tile.myst.starfissure.name=Star Fissure
-tile.myst.writing_desk.name=Writing Desk
+tile.myst.receptacle.name = Book Receptacle
+tile.myst.unstable.name = Decay Effect
+tile.myst.unstable.blue.name = Blue Decay
+tile.myst.unstable.red.name = Red Decay
+tile.myst.unstable.purple.name = Purple Decay
+tile.myst.unstable.white.name = White Decay
+tile.myst.unstable.black.name = Черно Decay
+tile.myst.crystal.name = Crystal
+tile.myst.lectern.name = аналой
+tile.myst.bookstand.name = етажерка за книги
+tile.myst.linkmodifier.name = Link Modifier
+tile.myst.bookbinder.name = Book Binder
+tile.myst.inkmixer.name = Ink Mixer
+tile.myst.linkportal.name = Link Portal
+tile.myst.starfissure.name = Star фисури
+tile.myst.writing_desk.name = Работно бюро
 
-item.myst.agebook.name=Descriptive Book
-item.myst.linkbook.name=Linking book
-item.myst.notebook.name=Notebook
-item.myst.page.blank.name=Blank Page
-item.myst.page.panel.name=Link Panel Page
-item.myst.page.symbol.name=Page
-item.myst.unlinkedbook.name=Unlinked Link Book
-item.myst.writingdesk.name=Writing Desk
-item.myst.writingdesk.top.name=Writing Desk Backboard
-item.myst.vial.name=Ink Vial
+item.myst.agebook.name = Дескриптивна Book
+item.myst.linkbook.name = Свързване на книга
+item.myst.notebook.name = Notebook
+item.myst.page.blank.name = Blank Page
+item.myst.page.panel.name = Link Panel Page
+item.myst.page.symbol.name = Page
+item.myst.unlinkedbook.name = Несвързаните Link Book
+item.myst.writingdesk.name = Работно бюро
+item.myst.writingdesk.top.name = писане Desk Backboard
+item.myst.vial.name = Ink Флакон
 
-itemGroup.mystcraft.common=Mystcraft
-itemGroup.mystcraft.pages=Mystcraft Pages
+itemGroup.mystcraft.common = Mystcraft
+itemGroup.mystcraft.pages = Mystcraft Pages
 
-fluid.myst.ink.black=Black Ink
-tile.myst.fluid.myst.ink.black.name=Black Ink
+fluid.myst.ink.black = черно мастило
+tile.myst.fluid.myst.ink.black.name = черно мастило
 
-achievement.myst.symbol=Small Step of the Journey
-achievement.myst.symbol.desc=Find a Symbol
-achievement.myst.write=The Art: A Primer
-achievement.myst.write.desc=Copy A Symbol
-achievement.myst.agebook=One Way Ticket
-achievement.myst.agebook.desc=Craft a Descriptive Book. Don't forget it's a one way trip!
-achievement.myst.linkbook=Tie a String
-achievement.myst.linkbook.desc=Craft a Linking Book. Good, now you can get back!
-achievement.myst.quinn=Call Me Quinn
-achievement.myst.quinn.desc=Travel to a dimension without a linking book. Better hope there's a way out!
+achievement.myst.symbol = Малка стъпка от пътуването
+achievement.myst.symbol.desc = Намерете Symbol
+achievement.myst.write = Изкуството: A Primer
+achievement.myst.write.desc = Copy A Symbol
+achievement.myst.agebook = One Way Ticket
+achievement.myst.agebook.desc = Craft описателно Book. Да не забравяме, че това е един от начините пътуване!
+achievement.myst.linkbook = Вържете String
+achievement.myst.linkbook.desc = Craft една свързваща книга. Добре, сега можете да получите обратно!
+achievement.myst.quinn = Call Me Quinn
+achievement.myst.quinn.desc = Travel до измерение без свързваща книга. По-добре Надявам се, че има изход!
 
-linkeffect.disarm.name=Disarm
-linkeffect.generateplatform.name=Generate Platform
-linkeffect.intralinking.name=Intra-Linking
-linkeffect.maintainmomentum.name=Maintain Momentum
-linkeffect.relative.name=Relative Link
+linkeffect.disarm.name = Disarm
+linkeffect.generateplatform.name = Генериране на Platform
+linkeffect.intralinking.name = Intra-Linking
+linkeffect.maintainmomentum.name = Поддържане Momentum
+linkeffect.relative.name = Относителна Link
 
-mystsymbol.BioConHuge.name=Huge Biomes
-mystsymbol.BioConLarge.name=Large Biomes
-mystsymbol.BioConMedium.name=Medium Biomes
-mystsymbol.BioConNative.name=Native Biome Controller
-mystsymbol.BioConSingle.name=Single Biome
-mystsymbol.BioConSmall.name=Small Biomes
-mystsymbol.BioConTiled.name=Tiled Biomes
-mystsymbol.BioConTiny.name=Tiny Biomes
-mystsymbol.Caves.name=Caves
-mystsymbol.ColorCloud.name=Cloud Color
-mystsymbol.ColorCloudNat.name=Natural Cloud Color
-mystsymbol.ColorFog.name=Fog Color
-mystsymbol.ColorFogNat.name=Natural Fog Color
-mystsymbol.ColorFoliage.name=Foliage Color
-mystsymbol.ColorFoliageNat.name=Natural Foliage Color
-mystsymbol.ColorGrass.name=Grass Color
-mystsymbol.ColorGrassNat.name=Natural Grass Color
-mystsymbol.ColorHorizon.name=Sunset Color
-mystsymbol.ColorSky.name=Sky Color
-mystsymbol.ColorSkyNat.name=Natural Sky Color
-mystsymbol.ColorSkyNight.name=Night Sky Color
-mystsymbol.ColorWater.name=Water Color
-mystsymbol.ColorWaterNat.name=Natural Water Color
-mystsymbol.CryForm.name=Crystalline Formations
-mystsymbol.DenseOres.name=Dense Ores
-mystsymbol.Dungeons.name=Dungeons
-mystsymbol.EnvAccel.name=Accelerated
-mystsymbol.EnvExplosions.name=Spontaneous Explosions
-mystsymbol.EnvLightning.name=Lightning
-mystsymbol.EnvMeteor.name=Meteors
-mystsymbol.EnvScorch.name=Scorched Surface
-mystsymbol.Flat.name=Flat World
-mystsymbol.FloatIslands.name=Floating Islands
-mystsymbol.GenSpikes.name=Spikes
-mystsymbol.HugeTrees.name=Huge Trees
-mystsymbol.LakesDeep.name=Deep Lakes
-mystsymbol.LakesSurface.name=Surface Lakes
-mystsymbol.LightingBright.name=Bright Lighting
-mystsymbol.LightingDark.name=Dark Lighting
-mystsymbol.LightingNormal.name=Normal Lighting
-mystsymbol.Mineshafts.name=Mineshafts
-mystsymbol.ModClear.name=Clear Modifiers
-mystsymbol.ModGradient.name=Gradient
-mystsymbol.MoonDark.name=Dark Moon
-mystsymbol.MoonNormal.name=Normal Moon
-mystsymbol.NetherFort.name=Nether Fortress
-mystsymbol.NoHorizon.name=Boundless Sky
-mystsymbol.NoSea.name=No Seas
-mystsymbol.Obelisks.name=Obelisks
-mystsymbol.PvPOff.name=Anti-PvP
-mystsymbol.Rainbow.name=Rainbow
-mystsymbol.Ravines.name=Ravines
-mystsymbol.Skylands.name=Skylands
-mystsymbol.StarFissure.name=Star Fissure
-mystsymbol.StarsDark.name=Dark Stars
-mystsymbol.StarsEndSky.name=Ender Starfield
-mystsymbol.StarsNormal.name=Normal Stars
-mystsymbol.StarsTwinkle.name=Twinkling Stars
-mystsymbol.Strongholds.name=Strongholds
-mystsymbol.SunDark.name=Dark Sun
-mystsymbol.SunNormal.name=Normal Sun
-mystsymbol.Tendrils.name=Tendrils
-mystsymbol.TerModSpheres.name=Spheres
-mystsymbol.TerrainAmplified.name=Amplified Normal World
-mystsymbol.TerrainEnd.name=Island World
-mystsymbol.TerrainNether.name=Cave World
-mystsymbol.TerrainNormal.name=Standard World
-mystsymbol.WeatherCloudy.name=Overcast
-mystsymbol.WeatherFast.name=Fast Weather
-mystsymbol.WeatherNorm.name=Normal Weather
-mystsymbol.WeatherOff.name=No Weather
-mystsymbol.WeatherOn.name=Eternal Weather
-mystsymbol.WeatherRain.name=Eternal Rain
-mystsymbol.WeatherSlow.name=Slow Weather
-mystsymbol.WeatherSnow.name=Eternal Snow
-mystsymbol.WeatherStorm.name=Eternal Storm
-mystsymbol.Villages.name=Villages
-mystsymbol.Void.name=Void World
+mystsymbol.BioConHuge.name = Огромни биоми
+mystsymbol.BioConLarge.name = Голям биоми
+mystsymbol.BioConMedium.name = средни биоми
+mystsymbol.BioConNative.name = Native Biome Controller
+mystsymbol.BioConSingle.name = Single Biome
+mystsymbol.BioConSmall.name = малкия биоми
+mystsymbol.BioConTiled.name = Подове биоми
+mystsymbol.BioConTiny.name = Малки биоми
+mystsymbol.Caves.name = Caves
+mystsymbol.ColorCloud.name = Cloud Color
+mystsymbol.ColorCloudNat.name = Natural Color Cloud
+mystsymbol.ColorFog.name = Халогенни Color
+mystsymbol.ColorFogNat.name = Natural Color мъгла
+mystsymbol.ColorFoliage.name = Листа Color
+mystsymbol.ColorFoliageNat.name = Natural Color Листа
+mystsymbol.ColorGrass.name = Grass Color
+mystsymbol.ColorGrassNat.name = Natural Color Grass
+mystsymbol.ColorHorizon.name = Sunset Color
+mystsymbol.ColorSky.name = Sky Color
+mystsymbol.ColorSkyNat.name = Natural Color Sky
+mystsymbol.ColorSkyNight.name = Night Sky Color
+mystsymbol.ColorWater.name = акварел
+mystsymbol.ColorWaterNat.name = Natural Color Water
+mystsymbol.CryForm.name = Crystalline формации
+mystsymbol.DenseOres.name = Плътни руди
+mystsymbol.Dungeons.name = Dungeons
+mystsymbol.EnvAccel.name = Ускорена
+mystsymbol.EnvExplosions.name = Спонтанни Експлозии
+mystsymbol.EnvLightning.name = Lightning
+mystsymbol.EnvMeteor.name = Метеори
+mystsymbol.EnvScorch.name = Scorched Surface
+mystsymbol.Flat.name = Flat World
+mystsymbol.FloatIslands.name = Плаващи острови
+mystsymbol.GenSpikes.name = Spikes
+mystsymbol.HugeTrees.name = Огромни дървета
+mystsymbol.LakesDeep.name = Deep езера
+mystsymbol.LakesSurface.name = Surface Lakes
+mystsymbol.LightingBright.name = Bright осветление
+mystsymbol.LightingDark.name = Тъмно Lighting
+mystsymbol.LightingNormal.name = Normal Lighting
+mystsymbol.Mineshafts.name = Mineshafts
+mystsymbol.ModClear.name = Ясни Модификатори
+mystsymbol.ModGradient.name = Gradient
+mystsymbol.MoonDark.name = Тъмно Moon
+mystsymbol.MoonNormal.name = Normal Moon
+mystsymbol.NetherFort.name = Nether Fortress
+mystsymbol.NoHorizon.name = безгранична Sky
+mystsymbol.NoSea.name = Няма Seas
+mystsymbol.Obelisks.name = обелиски
+mystsymbol.PvPOff.name = Anti-PvP
+mystsymbol.Rainbow.name = Rainbow
+mystsymbol.Ravines.name = Ravines
+mystsymbol.Skylands.name = Skylands
+mystsymbol.StarFissure.name = Star фисури
+mystsymbol.StarsDark.name = Тъмни Stars
+mystsymbol.StarsEndSky.name = Ender Starfield
+mystsymbol.StarsNormal.name = Нормални Stars
+mystsymbol.StarsTwinkle.name = Премигващи Stars
+mystsymbol.Strongholds.name = крепости
+mystsymbol.SunDark.name = Тъмно Sun
+mystsymbol.SunNormal.name = Normal Sun
+mystsymbol.Tendrils.name = Пипалата
+mystsymbol.TerModSpheres.name = Сфери
+mystsymbol.TerrainAmplified.name = Усилвател Normal World
+mystsymbol.TerrainEnd.name = Island World
+mystsymbol.TerrainNether.name = Cave World
+mystsymbol.TerrainNormal.name = Standard World
+mystsymbol.WeatherCloudy.name = Облачно
+mystsymbol.WeatherFast.name = Fast Времето
+mystsymbol.WeatherNorm.name = Normal Времето
+mystsymbol.WeatherOff.name = Няма Времето
+mystsymbol.WeatherOn.name = Eternal Времето
+mystsymbol.WeatherRain.name = Eternal Rain
+mystsymbol.WeatherSlow.name = Slow Времето
+mystsymbol.WeatherSnow.name = Eternal Snow
+mystsymbol.WeatherStorm.name = Eternal Буря
+mystsymbol.Villages.name = Villages
+mystsymbol.Void.name = Void World
