--- a/lang/de_DE.lang
+++ b/lang/de_DE.lang
@@ -41,7 +41,7 @@ item.myst.linkbook.name=Verbindungsbuch
 item.myst.notebook.name=Notizbuch
 item.myst.page.blank.name=Leere Seite
 item.myst.page.panel.name=Verbindungsseite
-item.myst.page.symbol.name=Seite
+item.myst.page.symbol.name=Symbolseite
 item.myst.unlinkedbook.name=Nicht verbundenes Verbindungsbuch
 item.myst.writingdesk.name=Schreibtisch
 item.myst.writingdesk.top.name=Schreibtischrücken
@@ -58,11 +58,11 @@ achievement.myst.symbol.desc=Finde ein Symbol
 achievement.myst.write=Die Kunst: Grundlagen
 achievement.myst.write.desc=Kopiere ein Symbol
 achievement.myst.agebook=Eine Reise ohne Rückfahrschein
-achievement.myst.agebook.desc=Fertige ein Beschreibungsbuch. Vergesse aber nicht das dies eine Reise ohne Rückfahrschein ist!
+achievement.myst.agebook.desc=Fertige ein Beschreibungsbuch. Vergiss aber nicht, dass dies eine Reise ohne Rückfahrschein ist!
 achievement.myst.linkbook=Knüpfe ein Rettungsseil
 achievement.myst.linkbook.desc=Fertige ein Verbindungsbuch. Gut, jetzt hast Du einen Weg zurück!
 achievement.myst.quinn=Nenn mich Quinn
-achievement.myst.quinn.desc=Reise ohne Verbindungsbuch in eine Dimension. Aber hoffe auf einen Weg zurück!
+achievement.myst.quinn.desc=Reise ohne Verbindungsbuch in eine Dimension und hoffe auf einen Weg zurück!
 
 linkeffect.disarm.name=Entwaffnen
 linkeffect.generateplatform.name=Plattform generieren
@@ -76,7 +76,7 @@ mystsymbol.BioConMedium.name=Mittelgroße Biome
 mystsymbol.BioConNative.name=Native Biomkontrolle
 mystsymbol.BioConSingle.name=Einzelnes Biom
 mystsymbol.BioConSmall.name=Kleine Biome
-mystsymbol.BioConTiled.name=Abwechselnde Biome
+mystsymbol.BioConTiled.name=Gekachelte Biome
 mystsymbol.BioConTiny.name=Winzige Biome
 mystsymbol.Caves.name=Höhlen
 mystsymbol.ColorCloud.name=Wolkenfarbe
@@ -93,9 +93,9 @@ mystsymbol.ColorSkyNat.name=Natürliche Himmelsfarbe
 mystsymbol.ColorSkyNight.name=Nachthimmelsfarbe
 mystsymbol.ColorWater.name=Wasserfarbe
 mystsymbol.ColorWaterNat.name=Natürliche Wasserfarbe
-mystsymbol.CryForm.name=Kristalline Formationen
+mystsymbol.CryForm.name=Kristallformationen
 mystsymbol.DenseOres.name=Dichte Erze
-mystsymbol.Dungeons.name=Dungeons
+mystsymbol.Dungeons.name=Verliese
 mystsymbol.EnvAccel.name=Beschleunigt
 mystsymbol.EnvExplosions.name=Spontane Explosionen
 mystsymbol.EnvLightning.name=Blitz und Donner
@@ -105,11 +105,11 @@ mystsymbol.Flat.name=Flache Welt
 mystsymbol.FloatIslands.name=Schwebende Inseln
 mystsymbol.GenSpikes.name=Stacheln
 mystsymbol.HugeTrees.name=Riesige Bäume
-mystsymbol.LakesDeep.name=Tiefe Seen
+mystsymbol.LakesDeep.name=Untergrundseen
 mystsymbol.LakesSurface.name=Oberflächenseen
-mystsymbol.LightingBright.name=Helles Licht
-mystsymbol.LightingDark.name=Dunkles Licht
-mystsymbol.LightingNormal.name=Normales Licht
+mystsymbol.LightingBright.name=Helle Beleuchtung
+mystsymbol.LightingDark.name=Dunkle Beleuchtung
+mystsymbol.LightingNormal.name=Normale Beleuchtung
 mystsymbol.Mineshafts.name=Minenschächte
 mystsymbol.ModClear.name=Modifizierungen entfernen
 mystsymbol.ModGradient.name=Gradient
