--- a/lang/zh_CN.lang
+++ b/lang/zh_CN.lang
@@ -76,7 +76,7 @@ mystsymbol.BioConMedium.name=中型生物群系
 mystsymbol.BioConNative.name=本地生物群系控制器
 mystsymbol.BioConSingle.name=单一生物群系
 mystsymbol.BioConSmall.name=小型生物群系
-mystsymbol.BioConTiled.name=平坦生物群系
+mystsymbol.BioConTiled.name=附加生物群系
 mystsymbol.BioConTiny.name=微型生物群系
 mystsymbol.Caves.name=洞穴
 mystsymbol.ColorCloud.name=云朵颜色
@@ -99,11 +99,11 @@ mystsymbol.Dungeons.name=地牢
 mystsymbol.EnvAccel.name=加速
 mystsymbol.EnvExplosions.name=随机爆炸
 mystsymbol.EnvLightning.name=光照
-mystsymbol.EnvMeteor.name=流星
+mystsymbol.EnvMeteor.name=陨石坑
 mystsymbol.EnvScorch.name=燃烧大地
 mystsymbol.Flat.name=平坦世界
 mystsymbol.FloatIslands.name=浮岛
-mystsymbol.GenSpikes.name=锐钉
+mystsymbol.GenSpikes.name=尖塔
 mystsymbol.HugeTrees.name=参天巨树
 mystsymbol.LakesDeep.name=幽深湖泊
 mystsymbol.LakesSurface.name=地表湖泊
@@ -115,20 +115,20 @@ mystsymbol.ModClear.name=清除修改
 mystsymbol.ModGradient.name=渐变
 mystsymbol.MoonDark.name=深色月亮
 mystsymbol.MoonNormal.name=正常月亮
-mystsymbol.NetherFort.name=下界堡垒
+mystsymbol.NetherFort.name=下界要塞
 mystsymbol.NoHorizon.name=无边天空
 mystsymbol.NoSea.name=无海洋
 mystsymbol.Obelisks.name=方尖碑
 mystsymbol.PvPOff.name=反PvP
 mystsymbol.Rainbow.name=彩虹
-mystsymbol.Ravines.name=山沟
+mystsymbol.Ravines.name=峡谷
 mystsymbol.Skylands.name=空岛
-mystsymbol.StarFissure.name=星裂
+mystsymbol.StarFissure.name=星之裂痕
 mystsymbol.StarsDark.name=深色星星
 mystsymbol.StarsEndSky.name=末影粒子效果
 mystsymbol.StarsNormal.name=正常星星
 mystsymbol.StarsTwinkle.name=闪烁星星
-mystsymbol.Strongholds.name=堡垒
+mystsymbol.Strongholds.name=要塞
 mystsymbol.SunDark.name=深色太阳
 mystsymbol.SunNormal.name=正常太阳
 mystsymbol.Tendrils.name=卷须
@@ -136,7 +136,7 @@ mystsymbol.TerModSpheres.name=球体
 mystsymbol.TerrainAmplified.name=放大化正常世界
 mystsymbol.TerrainEnd.name=岛屿世界
 mystsymbol.TerrainNether.name=洞穴世界
-mystsymbol.TerrainNormal.name=标准世界
+mystsymbol.TerrainNormal.name=普通世界
 mystsymbol.WeatherCloudy.name=阴天
 mystsymbol.WeatherFast.name=快速变换天气
 mystsymbol.WeatherNorm.name=正常天气
@@ -145,6 +145,6 @@ mystsymbol.WeatherOn.name=永久天气
 mystsymbol.WeatherRain.name=永久雨天
 mystsymbol.WeatherSlow.name=慢速变换天气
 mystsymbol.WeatherSnow.name=永久雪天
-mystsymbol.WeatherStorm.name=永久暴风雨
+mystsymbol.WeatherStorm.name=永久风暴
 mystsymbol.Villages.name=村落
 mystsymbol.Void.name=虚空世界
