--- a/lang/de_DE.lang
+++ b/lang/de_DE.lang
@@ -112,7 +112,7 @@ mystsymbol.LightingDark.name=Dunkle Beleuchtung
 mystsymbol.LightingNormal.name=Normale Beleuchtung
 mystsymbol.Mineshafts.name=Minenschächte
 mystsymbol.ModClear.name=Modifizierungen entfernen
-mystsymbol.ModGradient.name=Gradient
+mystsymbol.ModGradient.name=Farbverlauf
 mystsymbol.MoonDark.name=Dunkler Mond
 mystsymbol.MoonNormal.name=Normaler Mond
 mystsymbol.NetherFort.name=Netherfestung
