--- a/lang/it_IT.lang
+++ b/lang/it_IT.lang
@@ -20,7 +20,7 @@ commands.myst.permissions.usage=/myst-permissions <player> <restrict|permit> <en
 commands.myst.chunkregen.usage=/myst-regenchunk [range] [dimId] [chunkX] [chunkZ]
 
 tile.myst.receptacle.name=Fessura per libro
-tile.myst.unstable.name=Effetto di instabilità
+tile.myst.unstable.name=Effetto d'instabilità
 tile.myst.unstable.blue.name=Instabilità blu
 tile.myst.unstable.red.name=Instabilità rossa
 tile.myst.unstable.purple.name=Instabilità viola
@@ -31,7 +31,7 @@ tile.myst.lectern.name=Leggio
 tile.myst.bookstand.name=Leggio per libro
 tile.myst.linkmodifier.name=Modificatore di collegamenti
 tile.myst.bookbinder.name=Rilegatore di libri
-tile.myst.inkmixer.name=Mescolatore di inchiostro
+tile.myst.inkmixer.name=Mescolatore d'inchiostro
 tile.myst.linkportal.name=Portale di collegamento
 tile.myst.starfissure.name=Fessura nelle stelle
 tile.myst.writing_desk.name=Scrivania
@@ -45,7 +45,7 @@ item.myst.page.symbol.name=Pagina
 item.myst.unlinkedbook.name=Libro non collegato
 item.myst.writingdesk.name=Scrivania
 item.myst.writingdesk.top.name=Tabellone della scrivania
-item.myst.vial.name=Boccetta di inchiostro
+item.myst.vial.name=Boccetta d'inchiostro
 
 itemGroup.mystcraft.common=Mystcraft
 itemGroup.mystcraft.pages=Pagine Mystcraft
@@ -134,7 +134,7 @@ mystsymbol.SunNormal.name=Sole normale
 mystsymbol.Tendrils.name=Vittici
 mystsymbol.TerModSpheres.name=Sfere
 mystsymbol.TerrainAmplified.name=Mondo amplificato
-mystsymbol.TerrainEnd.name=Mondo di isole
+mystsymbol.TerrainEnd.name=Mondo d'isole
 mystsymbol.TerrainNether.name=Mondo di caverne
 mystsymbol.TerrainNormal.name=Mondo normale
 mystsymbol.WeatherCloudy.name=Cielo coperto
