--- a/lang/de_DE.lang
+++ b/lang/de_DE.lang
@@ -58,9 +58,9 @@ achievement.myst.symbol.desc=Finde ein Symbol
 achievement.myst.write=Die Kunst: Grundlagen
 achievement.myst.write.desc=Kopiere ein Symbol
 achievement.myst.agebook=Eine Reise ohne Rückfahrschein
-achievement.myst.agebook.desc=Fertige ein Beschreibungsbuch. Vergiss aber nicht, dass dies eine Reise ohne Rückfahrschein ist!
+achievement.myst.agebook.desc=Erstelle ein Beschreibungsbuch. Vergiss aber nicht, dass dies eine Reise ohne Rückfahrschein ist!
 achievement.myst.linkbook=Knüpfe ein Rettungsseil
-achievement.myst.linkbook.desc=Fertige ein Verbindungsbuch. Gut, jetzt hast Du einen Weg zurück!
+achievement.myst.linkbook.desc=Erstelle ein Verbindungsbuch. Gut, nun hast Du einen Weg zurück!
 achievement.myst.quinn=Nenn mich Quinn
 achievement.myst.quinn.desc=Reise ohne Verbindungsbuch in eine Dimension und hoffe auf einen Weg zurück!
 
@@ -107,9 +107,9 @@ mystsymbol.GenSpikes.name=Stacheln
 mystsymbol.HugeTrees.name=Riesige Bäume
 mystsymbol.LakesDeep.name=Untergrundseen
 mystsymbol.LakesSurface.name=Oberflächenseen
-mystsymbol.LightingBright.name=Helle Beleuchtung
-mystsymbol.LightingDark.name=Dunkle Beleuchtung
-mystsymbol.LightingNormal.name=Normale Beleuchtung
+mystsymbol.LightingBright.name=Helles Licht
+mystsymbol.LightingDark.name=Dunkles Licht
+mystsymbol.LightingNormal.name=Normales Licht
 mystsymbol.Mineshafts.name=Minenschächte
 mystsymbol.ModClear.name=Modifizierungen entfernen
 mystsymbol.ModGradient.name=Farbverlauf
@@ -119,7 +119,7 @@ mystsymbol.NetherFort.name=Netherfestung
 mystsymbol.NoHorizon.name=Grenzenloser Himmel
 mystsymbol.NoSea.name=Keine Seen
 mystsymbol.Obelisks.name=Obelisken
-mystsymbol.PvPOff.name=Anti-PvP
+mystsymbol.PvPOff.name=Kein PVP
 mystsymbol.Rainbow.name=Regenbogen
 mystsymbol.Ravines.name=Schluchten
 mystsymbol.Skylands.name=Himmelslande
@@ -133,7 +133,7 @@ mystsymbol.SunDark.name=Dunkle Sonne
 mystsymbol.SunNormal.name=Normale Sonne
 mystsymbol.Tendrils.name=Ranken
 mystsymbol.TerModSpheres.name=Sphären
-mystsymbol.TerrainAmplified.name=Zerklüftete normale Welt
+mystsymbol.TerrainAmplified.name=Zerklüftete Welt
 mystsymbol.TerrainEnd.name=Inselwelt
 mystsymbol.TerrainNether.name=Höhlenwelt
 mystsymbol.TerrainNormal.name=Standardwelt
