--- a/lang/zh_CN.lang
+++ b/lang/zh_CN.lang
@@ -98,7 +98,7 @@ mystsymbol.DenseOres.name=密集矿物
 mystsymbol.Dungeons.name=地牢
 mystsymbol.EnvAccel.name=加速
 mystsymbol.EnvExplosions.name=随机爆炸
-mystsymbol.EnvLightning.name=光照
+mystsymbol.EnvLightning.name=闪电
 mystsymbol.EnvMeteor.name=陨石坑
 mystsymbol.EnvScorch.name=燃烧大地
 mystsymbol.Flat.name=平坦世界
