--- a/lang/nl_NL.lang
+++ b/lang/nl_NL.lang
@@ -1,17 +1,17 @@
 commands.myst.tpx.usage=/tpx [onderwerp:speler] <doel:speler | doel:dimensie [x y z]>
-commands.myst.tpx.fail.nosubject=Ongeldig teleportatie onderwerp. Geen teleport.
-commands.myst.tpx.fail.noworld=Wereld voor dimensie %d niet gevonden. Geen teleport.
+commands.myst.tpx.fail.nosubject=Ongeldige teleportatie onderwerp. Geen teleport.
+commands.myst.tpx.fail.noworld=Wereld voor dimensie %d niet gevonden. Geen teleportatie.
 
 commands.myst.time.usage=/time <set|add> <waarde> [dimensie]
 commands.myst.time.fail.noworld=Doel dimensie is niet geladen
 commands.myst.time.set=Tijd verzet naar %d in dimensie %d
 commands.myst.time.set.all=Tijd verzet naar %d in alle dimensies
-commands.myst.time.added=%d aan de tijd toegevoegd in dimensie %d
-commands.myst.time.added.all=%d aan de tijd toegevoegd in alle dimensies
+commands.myst.time.added=%d toegevoegd aan de tijd in dimensie %d
+commands.myst.time.added.all=%d toegevoegd aan de tijd in alle dimensies
 
 commands.myst.toggledownfall.usage=/toggledownfall [dimensie]
 commands.myst.downfall.success=Neerslag omgeschakeld in dimensie %d
-commands.myst.downfall.fail.nodim=Geen dimensie gezet
+commands.myst.downfall.fail.nodim=Geen dimensie gespecificeerd.
 
 commands.myst.agebook.usage=/myst-agebook [dimensie]
 commands.myst.twi.usage=/myst-twi [dimensie] [true|false]
@@ -20,17 +20,17 @@ commands.myst.permissions.usage=/myst-permissions <speler> <restrict|permit> <en
 commands.myst.chunkregen.usage=/myst-regenchunk [bereik]
 
 tile.myst.receptacle.name=Boekenhouder
-tile.myst.unstable.name=Verval Effect
-tile.myst.unstable.blue.name=Blauw Verval
-tile.myst.unstable.red.name=Rood Verval
-tile.myst.unstable.purple.name=Paars Verval
-tile.myst.unstable.white.name=Wit Verval
-tile.myst.unstable.black.name=Zwart Verval
+tile.myst.unstable.name=Onstabiliteits Effect
+tile.myst.unstable.blue.name=Blauwe Onstabiliteit
+tile.myst.unstable.red.name=Rode Onstabiliteit
+tile.myst.unstable.purple.name=Paarse Onstabiliteit
+tile.myst.unstable.white.name=Witte Onstabiliteit
+tile.myst.unstable.black.name=Zwarte Onstabiliteit
 tile.myst.crystal.name=Kristal
 tile.myst.lectern.name=Lessenaar
 tile.myst.bookstand.name=Boekenstand
 tile.myst.linkmodifier.name=Verbindingswijziger
-tile.myst.bookbinder.name=Boekenbinder
+tile.myst.bookbinder.name=Boekbinder
 tile.myst.inkmixer.name=Inkt Mixer
 tile.myst.linkportal.name=Verbindingsportaal
 tile.myst.starfissure.name=Sterren Kloof
@@ -40,9 +40,9 @@ item.myst.agebook.name=Beschrijvend Boek
 item.myst.linkbook.name=Verbindingsboek
 item.myst.notebook.name=Notitieboek
 item.myst.page.blank.name=Blanke Pagina
-item.myst.page.panel.name=Link Paneel Pagina
+item.myst.page.panel.name=Link Paneel
 item.myst.page.symbol.name=Pagina
-item.myst.unlinkedbook.name=Ongelinkt Verbindingsboek
+item.myst.unlinkedbook.name=Ongelinkte Verbindingsboek
 item.myst.writingdesk.name=Schrijftafel
 items.myst.writingdesk.top.name=Schrijftafel Bord
 item.myst.vial.name=Inkt Flesje
@@ -58,21 +58,21 @@ achievement.myst.symbol.desc=Vind een symbool
 achievement.myst.write=De kunst: Een grondlaag
 achievement.myst.write.desc=Kopiëer een symbool
 achievement.myst.agebook=Enkele reis
-achievement.myst.agebook.desc=Vervaardig een beschrijvend boek. Vergeet niet dat het een enkele reis is!
+achievement.myst.agebook.desc=Creëer een beschrijvend boek. Vergeet niet dat het een enkele reis is!
 achievement.myst.linkbook=Bind een draad
-achievement.myst.linkbook.desc=Vervaardig een verbindingsboek. Goed, nu kan je terug gaan!
+achievement.myst.linkbook.desc=Creëer een verbindingsboek. Goed, nu kan je terug gaan!
 achievement.myst.quinn=Noem mij maar Quinn
 achievement.myst.quinn.desc=Reis naar een dimensie zonder een verbindingsboek. Hoop maar dat er een uitgang is!
 
 linkeffect.disarm.name=Ontwapenen
 linkeffect.generateplatform.name=Genereer Platform
 linkeffect.intralinking.name=Intra-Dimensioneel Linken
-linkeffect.maintainmomentum.name=Moment Behouden
+linkeffect.maintainmomentum.name=Momentum behouden
 linkeffect.relative.name=Relatieve Link
 
 mystsymbol.BioConHuge.name=Gigantische Biomen
 mystsymbol.BioConLarge.name=Grote Biomen
-mystsymbol.BioConMedium.name=Medium Biomen
+mystsymbol.BioConMedium.name=Middelmatige Biomen
 mystsymbol.BioConNative.name=Normale Bioom Bestuurder
 mystsymbol.BioConSingle.name=Enkel Bioom
 mystsymbol.BioConSmall.name=Klein Bioom
@@ -111,7 +111,7 @@ mystsymbol.LightingBright.name=Felle Belichting
 mystsymbol.LightingDark.name=Donkere Belichting
 mystsymbol.LightingNormal.name=Normale Belichting
 mystsymbol.Mineshafts.name=Mijnschaften
-mystsymbol.ModClear.name=Verwijder Veranderaars
+mystsymbol.ModClear.name=Verwijder Modificaties
 mystsymbol.ModGradient.name=Helling
 mystsymbol.MoonDark.name=Donkere Maan
 mystsymbol.MoonNormal.name=Normale Maan
@@ -134,9 +134,9 @@ mystsymbol.SunNormal.name=Normale Zon
 mystsymbol.Tendrils.name=Scheuten
 mystsymbol.TerModSpheres.name=Bollen
 mystsymbol.TerrainAmplified.name=Versterkte Normale Wereld
-mystsymbol.TerrainEnd.name=Eilanden Wereld
-mystsymbol.TerrainNether.name=Grotten Wereld
-mystsymbol.TerrainNormal.name=Standaard Wereld
+mystsymbol.TerrainEnd.name=Eilanden-Wereld
+mystsymbol.TerrainNether.name=Grotten-Wereld
+mystsymbol.TerrainNormal.name=Standaard-Wereld
 mystsymbol.WeatherCloudy.name=Regenachtig
 mystsymbol.WeatherFast.name=Snel Weer
 mystsymbol.WeatherNorm.name=Normaal Weer
